--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
     "Electron",
+    "Node.js"
   ],
   "author": "Aqib Rashid",
   "license": "CC0-1.0",
