--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "test": "jest --config ./jest.config.js"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,7 +18,9 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.7.8",
-    "electron-builder": "^19.34.2"
+    "electron-builder": "^19.34.2",
+    "jest": "^21.2.1",
+    "spectron": "^3.7.2"
   },
   "build": {
     "appId": "12345",
